Added sidebar menu blur effect

--- a/src/style.css
+++ b/src/style.css
@@ -263,6 +263,10 @@ body {
     display: none;
 }
 
+.sidebar-item-active{
+    background-color: var(--hover-light);
+}
+
 /*Media Queries*/
 
 /* Smartphones (portrait and landscape) */
