--- a/src/index.ejs
+++ b/src/index.ejs
@@ -19,7 +19,7 @@
                 <div class="sidebar-top">
                     <div class="sidebar-header">Home</div>
                     <ul class="sidebar-list">
-                        <li class="sidebar-item"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="#10a885" d="M9 5v4h12V5M9 19h12v-4H9m0-1h12v-4H9M4 9h4V5H4m0 14h4v-4H4m0-1h4v-4H4v4Z"/></svg>All Tasks</li>
+                        <li class="sidebar-item sidebar-item-active"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="#10a885" d="M9 5v4h12V5M9 19h12v-4H9m0-1h12v-4H9M4 9h4V5H4m0 14h4v-4H4m0-1h4v-4H4v4Z"/></svg>All Tasks</li>
                         <li class="sidebar-item"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="#ff5436" d="M19 4h-2V2h-2v2H9V2H7v2H5c-1.103 0-2 .897-2 2v14c0 1.103.897 2 2 2h14c1.103 0 2-.897 2-2V6c0-1.103-.897-2-2-2zm-1 15h-6v-6h6v6zm1-10H5V7h14v2z"/></svg>Today</li>
                         <li class="sidebar-item"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="#126fb5" d="M5 22h14c1.103 0 2-.897 2-2V6c0-1.103-.897-2-2-2h-2V2h-2v2H9V2H7v2H5c-1.103 0-2 .897-2 2v14c0 1.103.897 2 2 2zm11-6H8v-2h8v2zM5 7h14v2H5V7z"/></svg>This Week</li>
                         <li class="sidebar-item"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="#ffc300" d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2L9.19 8.63L2 9.24l5.46 4.73L5.82 21z"/></svg>Important</li>
@@ -47,13 +47,14 @@
         <!-- #endregion-->
 
         <!-- #region main-->
-        <div class="main">
-
+        <div id="mainSection" class="main">
+            <h1>WEBPACK</h1>
+            <h1>WEBPACK</h1>
         </div>
         <!-- #endregion-->
 
         <!-- #region footer-->
-        <div class="footer">
+        <div id="footerSection" class="footer">
 
         </div>
         <!-- #endregion-->
