Changed font sizes for sidebar menu

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -48,8 +48,7 @@
 
         <!-- #region main-->
         <div id="mainSection" class="main">
-            <h1>WEBPACK</h1>
-            <h1>WEBPACK</h1>
+            <h1>Webpack</h1>
         </div>
         <!-- #endregion-->
 
