--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,6 @@
 @font-face {
-    font-family: 'Montserrat';
-    src: url(./fonts/Montserrat-VariableFont_wght.ttf);
+    font-family: 'NeuePlak';
+    src: url(./fonts/TT\ Interphases\ Pro\ Trial\ ExtraBold.ttf);
 }
 
 * {
@@ -14,7 +14,7 @@ html {
 
 body {
     font-size: 16rem;
-    font-family: 'Montserrat';
+    font-family: 'NeuePlak';
     height: 100%;
     overflow: hidden;
 }
@@ -81,7 +81,6 @@ body {
     padding: 5px 5px 5px 10px;
     cursor: pointer;
     border-radius: 5px;
-    font-weight: 500;
 }
 
 .sidebar-item:hover{
@@ -97,8 +96,7 @@ body {
 }
 
 .sidebar-header{
-    font-size: 20rem;
-    font-weight: bold;
+    font-size: 21rem;
     padding-bottom: 10px;
     color: var(--text-light);
 }
@@ -113,7 +111,6 @@ body {
     justify-content: space-between;
     box-sizing: border-box;
     padding: 5px 5px 5px 10px;
-    font-weight: 500;
 }
 
 .switch {
