--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,10 @@
 @font-face {
-    font-family: 'NeuePlak';
-    src: url(./fonts/TT\ Interphases\ Pro\ Trial\ ExtraBold.ttf);
+  font-family: 'TTBold';
+  src: url(./fonts/TT\ Interphases\ Pro\ Trial\ Bold.ttf);
+}
+@font-face {
+  font-family: 'TTSemiBold';
+  src: url(./fonts/TT\ Interphases\ Pro\ Trial\ DemiBold.ttf);
 }
 
 * {
@@ -14,7 +18,7 @@ html {
 
 body {
     font-size: 16rem;
-    font-family: 'NeuePlak';
+    font-family: 'TTSemiBold';
     height: 100%;
     overflow: hidden;
 }
@@ -99,6 +103,7 @@ body {
     font-size: 21rem;
     padding-bottom: 10px;
     color: var(--text-light);
+    font-family: 'TTBold';
 }
 
 .sidebar-bottom{
