--- a/src/style.css
+++ b/src/style.css
@@ -74,7 +74,7 @@ body {
     display: flex;
     flex-direction: column;
     gap: 2px;
-    padding-bottom: 20px;
+    padding-bottom: 23px;
 }
 
 .sidebar-item{
@@ -104,6 +104,9 @@ body {
     padding-bottom: 10px;
     color: var(--text-light);
     font-family: 'TTBold';
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .sidebar-bottom{
@@ -230,6 +233,38 @@ body {
     background-color: var(--hover-light);
 }
 
+.flex{
+    display: flex;
+    align-items: center;
+    gap: 7px;
+}
+
+.sidebar-project{
+    display: flex;
+    align-items: center;
+    box-sizing: border-box;
+    padding: 5px 5px 5px 10px;
+    cursor: pointer;
+    border-radius: 5px;
+    justify-content: space-between;
+}
+
+.sidebar-project:hover{
+    background-color: var(--hover-light);
+}
+
+.sidebar-project:hover .dot-menu{
+    display: block;
+    display: flex;
+    align-items: center;
+    padding: 0px 3px 0px 3px;
+}
+
+.dot-menu{
+    display: none;
+}
+
+
 /*Media Queries*/
 
 /* Smartphones (portrait and landscape) */
@@ -263,6 +298,12 @@ body {
     }
     .main{
         padding: 50px 20px 20px 20px;
+    }
+    .dot-menu{
+        display: block;
+        display: flex;
+        align-items: center;
+        padding: 0px 3px 0px 3px;
     }
   }
   
