Removed sidebar project tools on small screens

--- a/src/style.css
+++ b/src/style.css
@@ -390,6 +390,12 @@ background-color: var(--hover-light);
         transform: translateX(0px);
         transition: transform 300ms ease-in-out;
     }
+    .delete, .rename{
+      display: none;
+    }
+    .project-name-input{
+      max-width: 150px;
+    }
   }
   
   /* Smartphones (portrait) */
