Changed font size for project delete display

--- a/src/style.css
+++ b/src/style.css
@@ -570,6 +570,9 @@ background-color: var(--hover-light);
     #oldName{
       font-size: 20rem;
     }
+    #deleteProjectName{
+      font-size: 20rem;
+    }
   }
   
   /* Smartphones (portrait) */
