--- a/src/style.css
+++ b/src/style.css
@@ -77,7 +77,7 @@ body {
     list-style-type: none;
     display: flex;
     flex-direction: column;
-    gap: 2px;
+    gap: 5px;
     padding-bottom: 23px;
 }
 
@@ -85,7 +85,8 @@ body {
   list-style-type: none;
   display: flex;
   flex-direction: column;
-  gap: 2px;
+  gap: 5px;
+  padding-bottom: 5px;
 }
 
 .sidebar-item{
