--- a/src/style.css
+++ b/src/style.css
@@ -619,7 +619,7 @@ background-color: var(--hover-light);
 
 .tasks-list-view{
   box-sizing: border-box;
-  padding: 10px 70px 0px 70px;
+  padding: 30px 70px 0px 70px;
 }
 
 .section-tasks{
@@ -728,6 +728,33 @@ background-color: var(--hover-light);
   gap: 10px;
 }
 
+.add-section-button{
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  appearance: none;
+  border: none;
+  outline: none;
+  background-color: var(--secondary-color-light);
+  color: var(--background-light);
+  font-size: 55rem;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  margin: 0px 70px 70px 0px;
+  cursor: pointer;
+  transition: ease-in-out, 200ms;
+  z-index: 10;
+}
+
+.add-section-button:hover{
+  transform: rotate(90deg);
+}
+
+.section{
+  padding-bottom: 50px;
+}
+
 /*Media Queries*/
 
 /* Smartphones (portrait and landscape) */
@@ -801,6 +828,9 @@ background-color: var(--hover-light);
     }
     .home-heading{
       padding-bottom: 7px;
+    }
+    .add-section-button{
+      margin: 0px 20px 20px 0px;
     }
   }
   
