--- a/src/style.css
+++ b/src/style.css
@@ -429,6 +429,9 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+.border-bottom{
   border-bottom: 1px solid var(--hover-light);
 }
 
