FIxed sidebar width

--- a/src/style.css
+++ b/src/style.css
@@ -752,6 +752,7 @@ background-color: var(--hover-light);
   cursor: pointer;
   transition: ease-in-out, 200ms;
   z-index: 10;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .add-section-button:hover{
@@ -802,7 +803,7 @@ background-color: var(--hover-light);
         position: absolute;
         z-index: 10;
         height: 100%;
-        width: 100vw;
+        width: 70vw;
         padding-top: 60px;
         transform: translateX(-500px);
     }
@@ -860,7 +861,7 @@ background-color: var(--hover-light);
       padding-bottom: 7px;
     }
     .add-section-button{
-      margin: 0px 20px 20px 0px;
+      margin: 0px 16px 16px 0px;
     }
   }
   
